@@ -91,6 +91,7 @@ class DictSchemaMixin(object):
         super(DictSchemaMixin, cls).__setup__()
         cls.__rpc__.update({
                 'get_keys': RPC(instantiate=0),
+                'search_get_keys': RPC(),
                 })
 
     @staticmethod
@@ -177,6 +178,11 @@ class DictSchemaMixin(object):
                 new_key['digits'] = (16, record.digits)
             keys.append(new_key)
         return keys
+
+    @classmethod
+    def search_get_keys(cls, domain, limit=None):
+        schemas = cls.search(domain, limit=limit)
+        return cls.get_keys(schemas)
 
     @classmethod
     def get_relation_fields(cls):
